CheckIn: Fix an issue [BZ] "Down" button should be disabled if there is only one column added for flat file data set[32329].